log
Thu May  5 11:22:29 HSP 2022: 
 heap.c | 7 ++++++-
 1 file changed, 6 insertions(+), 1 deletion(-)
 tests:  0|0
8c80338
Thu May  5 11:23:44 HSP 2022: 
 heap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|3
total_score: 10/70
9010ccc
Thu May  5 11:28:02 HSP 2022: 
 heap.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
 tests:  1|3
total_score: 10/70
65200ee
Thu May  5 11:28:40 HSP 2022: 
 heap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|2
total_score: 20/70
a6471cc
Thu May  5 11:37:55 HSP 2022: 
 heap.c | 10 +++++++---
 1 file changed, 7 insertions(+), 3 deletions(-)
 tests:  2|2
total_score: 20/70
6b3db3b
Thu May  5 11:51:52 HSP 2022: 
 heap.c | 13 +++++++++++++
 1 file changed, 13 insertions(+)
 tests:  2|2
total_score: 20/70
62ecf00
Thu May  5 11:56:57 HSP 2022: 
 heap.c | 7 ++++---
 1 file changed, 4 insertions(+), 3 deletions(-)
 tests:  2|2
total_score: 20/70
7d366b6
Thu May  5 12:01:09 HSP 2022: 
 heap.c | 7 +++++++
 1 file changed, 7 insertions(+)
 tests:  2|2
total_score: 20/70
b43b1ff
Thu May  5 12:02:27 HSP 2022: 
 heap.c | 7 +++++++
 1 file changed, 7 insertions(+)
 tests:  2|2
total_score: 20/70
7882976
Thu May  5 12:10:16 HSP 2022: 
 heap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|2
total_score: 20/70
ae45f69
Thu May  5 12:11:01 HSP 2022: 
 heap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|2
total_score: 20/70
3697cfa
Thu May  5 12:11:26 HSP 2022: 
 heap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|2
total_score: 20/70
db28c94
Thu May  5 12:13:40 HSP 2022: 
 heap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|2
total_score: 20/70
8721833
Thu May  5 12:14:53 HSP 2022: 
 heap.c | 7 ++++---
 1 file changed, 4 insertions(+), 3 deletions(-)
 tests:  2|2
total_score: 20/70
6581549
Thu May  5 12:17:06 HSP 2022: 
 heap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|2
total_score: 20/70
90c25d2
Thu May  5 12:17:37 HSP 2022: 
 heap.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  2|2
total_score: 20/70
ad28974
Thu May  5 12:26:37 HSP 2022: 
 heap.c | 11 ++++++-----
 1 file changed, 6 insertions(+), 5 deletions(-)
In file included from test.c:4:0:
heap.c: In function 'heap_push':
heap.c:40:4: error: expected ',' or ';' before 'printf'
    printf("prioridad antes de while: ");
    ^~~~~~
Compilation failed
0373818
Thu May  5 12:26:47 HSP 2022: 
 heap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|2
total_score: 20/70
b801b8e
Thu May  5 23:30:51 HSP 2022: 
 heap.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  0|0
prioridad durantcc922c6
Sat May  7 20:14:32 HSP 2022: 
 heap.c | 15 ++++-----------
 1 file changed, 4 insertions(+), 11 deletions(-)
 tests:  3|2
total_score: 25/70
61c5f6d
Sat May  7 20:15:55 HSP 2022: 
 heap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  3|2
total_score: 25/70
af439d0
Sat May  7 20:23:28 HSP 2022: 
 heap.c | 6 +++---
 1 file changed, 3 insertions(+), 3 deletions(-)
 tests:  3|2
total_score: 25/70
8eff6e8
Sat May  7 20:23:57 HSP 2022: 
 heap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  3|2
total_score: 25/70
a155ef0
Sat May  7 20:24:21 HSP 2022: 
 heap.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  3|2
total_score: 25/70
4c50dfc
Sat May  7 20:27:21 HSP 2022: 
 heap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
total_score: 35/70
6f28232
Sat May  7 20:28:40 HSP 2022: 
 heap.c | 7 -------
 1 file changed, 7 deletions(-)
 tests:  6|0
total_score: 35/70
73dad6c
Sat May  7 20:31:42 HSP 2022: 
 heap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  7|1
total_score: 45/70
0e2ac04
Sun May  8 22:13:33 HSP 2022: 
 heap.c | 6 ++++++
 1 file changed, 6 insertions(+)
 tests:  7|1
total_score: 45/70
9b8badf
Sun May  8 22:23:52 HSP 2022: 
 heap.c | 14 +++++++++++---
 1 file changed, 11 insertions(+), 3 deletions(-)
In file included from test.c:4:0:
heap.c: In function 'heap_pop':
heap.c:63:8: error: unused variable 'olderAux' [-Werror=unused-variable]
    int olderAux = 2*(auxSize) + 2;
        ^~~~~~~~
heap.c:62:8: error: unused variable 'youngerAux' [-Werror=unused-variable]
    int youngerAux = 2*(auxSize) + 1;
        ^~~~~~~~~~
heap.c:54:14: error: unused variable 'aux' [-Werror=unused-variable]
    heapElem* aux = (heapElem*) malloc (sizeof(heapElem));
              ^~~
cc1.exe: all warnings being treated as errors
Compilation failed
4bd1745
Sun May  8 22:24:01 HSP 2022: 
 heap.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
In file included from test.c:4:0:
heap.c: In function 'heap_pop':
heap.c:54:14: error: unused variable 'aux' [-Werror=unused-variable]
    heapElem* aux = (heapElem*) malloc (sizeof(heapElem));
              ^~~
cc1.exe: all warnings being treated as errors
Compilation failed
dda9f1b
Sun May  8 22:24:08 HSP 2022: 
 heap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  7|1
total_score: 45/70
ab21ef1
Sun May  8 22:24:22 HSP 2022: 
 heap.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  7|1
total_score: 45/70
00163b4
Sun May  8 22:24:36 HSP 2022: 
 heap.c | 6 +++---
 1 file changed, 3 insertions(+), 3 deletions(-)
In file included from test.c:4:0:
heap.c: In function 'heap_pop':
heap.c:66:34: error: invalid operands to binary < (have 'heapElem {aka struct nodo}' and 'int')
       if (pq->heapArray[auxSize] < 0)
           ~~~~~~~~~~~~~~~~~~~~~~ ^
heap.c:68:4: error: expected expression before '}' token
    }
    ^
heap.c:63:8: error: unused variable 'olderAux' [-Werror=unused-variable]
    int olderAux = 2*(auxSize) + 2;
        ^~~~~~~~
heap.c:62:8: error: unused variable 'youngerAux' [-Werror=unused-variable]
    int youngerAux = 2*(auxSize) + 1;
        ^~~~~~~~~~
cc1.exe: all warnings being treated as errors
Compilation failed
88e68a0
Sun May  8 22:30:26 HSP 2022: 
 heap.c | 12 +++++++++++-
 1 file changed, 11 insertions(+), 1 deletion(-)
 tests:  0|0
123027f
Sun May  8 22:31:14 HSP 2022: 
 heap.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  7|0
123027f
Sun May  8 22:32:16 HSP 2022: 
 heap.c | 8 ++++----
 1 file changed, 4 insertions(+), 4 deletions(-)
 tests:  7|0
   [ INFO ] Eliminando un dato
fb82245
Sun May  8 22:34:39 HSP 2022: 
 heap.c | 15 ++++++++++++---
 1 file changed, 12 insertions(+), 3 deletions(-)
 tests:  0|0
7e7b8ef
